# webnovel-writer-opencode

./: .gitignore  AGENTS.md  README.md  init.bat  init.sh  opencode.json  pyproject.toml  requirements.txt
.opencode/agents/: consistency-checker.md  context-agent.md  continuity-checker.md  data-agent.md  high-point-checker.md  ooc-checker.md  pacing-checker.md  reader-pull-checker.md
.opencode/references/: claude-code-call-matrix.md  context-contract-v2.md  system-data-flow.md
.opencode/scripts/: archive_manager.py  chapter_paths.py  export_manager.py  golden_three_checker.py  requirements.txt  workflow_manager.py
agents/: consistency-checker.md  continuity-checker.md
docs/: README.md  architecture.md  checkers.md  commands.md  genres.md  operations.md
prompts/: consistency-checker.txt  context-agent.txt  continuity-checker.txt  data-agent.txt  high-point-checker.txt  ooc-checker.txt  pacing-checker.txt  reader-pull-checker.txt  webnovel-build.txt  webnovel-plan.txt
scripts/: __init__.py  project_locator.py
scripts/data_modules/: rag_adapter.py
skills/webnovel-dashboard/: SKILL.md
skills/webnovel-init/: SKILL.md
skills/webnovel-query/: SKILL.md
skills/webnovel-resume/: SKILL.md
skills/webnovel-review/: SKILL.md
skills/webnovel-write/: SKILL.md
webnovel-writer/: .gitignore  AGENTS.md  README.md  pytest.ini  requirements.txt
webnovel-writer/agents/: context-agent.md  data-agent.md  high-point-checker.md  ooc-checker.md  pacing-checker.md  reader-pull-checker.md
新建文件夹/: .env.example  init.bat
项目文件/: init.bat
(+41 files in other folders)
