[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webnovel-writer"
version = "5.5.2"
description = "OpenCode 网文写作助手 - 长篇网文AI创作系统"
readme = "README.md"
license = "GPL-3.0"
keywords = ["webnovel", "opencode", "writing", "ai", "rag", "novel"]
dependencies = [
    "aiohttp>=3.8.0",
    "filelock>=3.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "watchdog>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
]

[project.scripts]
webnovel = "scripts.webnovel:main"

[project.urls]
Homepage = "https://github.com/lingfengQAQ/webnovel-writer"
Repository = "https://github.com/lingfengQAQ/webnovel-writer"
Issues = "https://github.com/lingfengQAQ/webnovel-writer/issues"

[tool.setuptools]
package-dir = {"" = "webnovel-writer"}

[tool.setuptools.packages.find]
where = ["webnovel-writer"]
